Creating website content with process journal, press kit, etc.

--- a/webgl/index.html
+++ b/webgl/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/v-r-to-the-2.loader.js";
+      var loaderUrl = buildUrl + "/webgl.loader.js";
       var config = {
-        dataUrl: buildUrl + "/v-r-to-the-2.data.br",
-        frameworkUrl: buildUrl + "/v-r-to-the-2.framework.js.br",
-        codeUrl: buildUrl + "/v-r-to-the-2.wasm.br",
+        dataUrl: buildUrl + "/webgl.data",
+        frameworkUrl: buildUrl + "/webgl.framework.js",
+        codeUrl: buildUrl + "/webgl.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "v r 2",
@@ -117,5 +117,17 @@
       };
       document.body.appendChild(script);
     </script>
+
+    <!-- FOR PIPPINBARR.COM -->
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GECKZQ62DH"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'G-GECKZQ62DH');
+</script>
   </body>
 </html>
